{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 159,
  "lineage": "52cc12fa-3397-9065-a1c2-76e60f6429c4",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "example_backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/prj-sandbox-infra-01/regions/us-central1/instanceGroups/l7-ilb-mig1-karna",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-13T11:49:21.447-08:00",
            "enable_cdn": false,
            "fingerprint": "DnwccsTwQtU=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/prj-sandbox-infra-01/global/httpHealthChecks/example-health-check"
            ],
            "id": "projects/prj-sandbox-infra-01/global/backendServices/example-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "example-backend-service",
            "port_name": "http",
            "project": "prj-sandbox-infra-01",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-sandbox-infra-01/global/backendServices/example-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_http_health_check.example_health_check",
            "google_compute_instance_template.instance_template_karna",
            "google_compute_network.vpc_network_karunakara",
            "google_compute_region_instance_group_manager.mig-karna",
            "google_compute_subnetwork.subnet_karunakara"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "instance_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "8080",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-13T11:48:11.952-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prj-sandbox-infra-01/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-sandbox-infra-01/global/networks/vpc-network-karunakara",
            "priority": 1000,
            "project": "prj-sandbox-infra-01",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-sandbox-infra-01/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network_karunakara"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "example_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/prj-sandbox-infra-01/global/forwardingRules/forwarding-rule",
            "ip_address": "34.95.118.4",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "forwarding-rule",
            "port_range": "80",
            "project": "prj-sandbox-infra-01",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-sandbox-infra-01/global/forwardingRules/forwarding-rule",
            "target": "projects/prj-sandbox-infra-01/global/targetHttpProxies/http-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.example_backend_service",
            "google_compute_http_health_check.example_health_check",
            "google_compute_instance_template.instance_template_karna",
            "google_compute_network.vpc_network_karunakara",
            "google_compute_region_instance_group_manager.mig-karna",
            "google_compute_subnetwork.subnet_karunakara",
            "google_compute_target_http_proxy.example_http_proxy",
            "google_compute_url_map.example_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network_karunakara",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/prj-sandbox-infra-01/global/networks/vpc-network-karunakara",
            "mtu": 1460,
            "name": "vpc-network-karunakara",
            "project": "prj-sandbox-infra-01",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-sandbox-infra-01/global/networks/vpc-network-karunakara"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_karunakara",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-13T11:48:13.039-08:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/prj-sandbox-infra-01/regions/us-central1/subnetworks/subnetwork-karunakara",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "subnetwork-karunakara",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-sandbox-infra-01/global/networks/vpc-network-karunakara",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "prj-sandbox-infra-01",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-sandbox-infra-01/regions/us-central1/subnetworks/subnetwork-karunakara",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network_karunakara"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "example_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-13T11:49:58.246-08:00",
            "id": "projects/prj-sandbox-infra-01/global/targetHttpProxies/http-proxy",
            "name": "http-proxy",
            "project": "prj-sandbox-infra-01",
            "proxy_bind": false,
            "proxy_id": 5998019443737211913,
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-sandbox-infra-01/global/targetHttpProxies/http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/prj-sandbox-infra-01/global/urlMaps/url-map"
          },
          "dependencies": [
            "google_compute_backend_service.example_backend_service",
            "google_compute_http_health_check.example_health_check",
            "google_compute_instance_template.instance_template_karna",
            "google_compute_network.vpc_network_karunakara",
            "google_compute_region_instance_group_manager.mig-karna",
            "google_compute_subnetwork.subnet_karunakara",
            "google_compute_url_map.example_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "example_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-13T11:49:45.095-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/prj-sandbox-infra-01/global/backendServices/example-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "L4NvhL22qeQ=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/prj-sandbox-infra-01/global/urlMaps/url-map",
            "map_id": 1019631462629487670,
            "name": "url-map",
            "path_matcher": [],
            "project": "prj-sandbox-infra-01",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-sandbox-infra-01/global/urlMaps/url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.example_backend_service",
            "google_compute_http_health_check.example_health_check",
            "google_compute_instance_template.instance_template_karna",
            "google_compute_network.vpc_network_karunakara",
            "google_compute_region_instance_group_manager.mig-karna",
            "google_compute_subnetwork.subnet_karunakara"
          ]
        }
      ]
    }
  ]
}